# ChangeLog for sys-libs/e2fsprogs-libs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.63 2010/12/04 21:51:20 vapier Exp $

  04 Dec 2010; Mike Frysinger <vapier@gentoo.org>
  e2fsprogs-libs-1.41.7.ebuild, e2fsprogs-libs-1.41.11.ebuild,
  e2fsprogs-libs-1.41.12.ebuild:
  Drop no longer needed bc dep #347708 by mehrunes.

  09 Oct 2010; Raúl Porcel <armin76@gentoo.org>
  e2fsprogs-libs-1.41.12.ebuild:
  alpha/sparc stable wrt #337270

  06 Oct 2010; Jeroen Roovers <jer@gentoo.org>
  e2fsprogs-libs-1.41.12.ebuild:
  Stable for HPPA (bug #337270).

  01 Oct 2010; Michael Weber <xmw@gentoo.org> e2fsprogs-libs-1.41.12.ebuild:
  Stable on arm, bug 337270

  01 Oct 2010; Brent Baude <ranger@gentoo.org>
  e2fsprogs-libs-1.41.12.ebuild:
  Marking e2fsprogs-libs-1.41.12 ppc64 for bug 337270

  30 Sep 2010; Markos Chandras <hwoarang@gentoo.org>
  e2fsprogs-libs-1.41.12.ebuild:
  Stable on amd64 wrt bug #337270

  27 Sep 2010; Brent Baude <ranger@gentoo.org>
  e2fsprogs-libs-1.41.12.ebuild:
  Marking e2fsprogs-libs-1.41.12 ppc for bug 337270

  25 Sep 2010; Markus Meier <maekke@gentoo.org>
  e2fsprogs-libs-1.41.12.ebuild:
  x86 stable, bug #337270

  08 Jul 2010; Brent Baude <ranger@gentoo.org>
  e2fsprogs-libs-1.41.11.ebuild:
  Marking e2fsprogs-libs-1.41.11 for sec bug 323893

  04 Jul 2010; Raúl Porcel <armin76@gentoo.org>
  e2fsprogs-libs-1.41.11.ebuild:
  sparc stable wrt #323893

*e2fsprogs-libs-1.41.12 (03 Jul 2010)

  03 Jul 2010; Mike Frysinger <vapier@gentoo.org>
  +e2fsprogs-libs-1.41.12.ebuild:
  Version bump #326655 by Sebastian Koehler.

  03 Jul 2010; Mike Frysinger <vapier@gentoo.org>
  e2fsprogs-libs-1.41.11.ebuild:
  Mark alpha/arm/ia64/s390/sh stable #323893.

  27 Jun 2010; <nixnut@gentoo.org> e2fsprogs-libs-1.41.11.ebuild:
  ppc stable #323893

  23 Jun 2010; Christoph Mende <angelos@gentoo.org>
  e2fsprogs-libs-1.41.11.ebuild:
  Stable on amd64 wrt bug #323893
