@@ -4,11 +4,11 @@ AUX e2fsprogs-libs-1.41.7-interix.patch 384 RMD160 1a4ad0090bdc2cb3daddafe96f64b
 AUX e2fsprogs-libs-1.41.7-interix6-net.patch 458 RMD160 9057218c7bf94ee3c8b44471b456ce48b36b9863 SHA1 f6910e6f90e3f64efbb4c4eeb36effb20a9aa924 SHA256 fd357db34b699896815c8732055e5d058b26a8598904d61ac7400b37be751233
 AUX e2fsprogs-libs-1.41.7-winnt.patch 5247 RMD160 26d58a2f4b471a256a2ca68e52ed29af328466b0 SHA1 e1d70dc1fbf5490dfe9f2037255f719d77f197b1 SHA256 291626c919045cc0134b65610d8966a0526d446e7e306b6d521dee8dd9c1f93b
 AUX e2fsprogs-libs-1.41.9-irix.patch 8580 RMD160 ccf9536d3818cf22315e84b1eac15447c404151a SHA1 14c72cdb2b9451e340399ff666ace21f61dc369f SHA256 90fd49315da0b8bb115c01c1ad13a3a9dc728bfa8c75f15f23eb89602568a644
-DIST e2fsprogs-libs-1.41.11.tar.gz 490074 RMD160 f525681a66ad900ae22c96becb0b986600e7fab4 SHA1 c1dda80dc6f4246f963b28c28dff0c8ad2ea4e76 SHA256 bc703807c730d46549669de037aaf07661b51d663c41aa81016a0768cea1e201
 DIST e2fsprogs-libs-1.41.12.tar.gz 490781 RMD160 f44ad14cc6787a6353111967cbb445bada805598 SHA1 6af0664190f46d5b93889d1e54c386f3c21ad271 SHA256 2f2dfc223c3ccaf7064abf13b692561fdc103fa5fbeea895253fe169b6598d2b
+DIST e2fsprogs-libs-1.41.14.tar.gz 489703 RMD160 7bdbe03f21a8ac58179fc98083c7e07d8e37708b SHA1 9182ca542c5368d3e1df1a70040f28006771e240 SHA256 dbc7a138a3218d9b80a0626b5b692d76934d6746d8cbb762751be33785d8d9f5
 DIST e2fsprogs-libs-1.41.7.tar.gz 494463 RMD160 e6ba0e313e3edd1a5c001b799c0826bc75c61ae6 SHA1 0863c9291385c42eefe7cfe6787a30af62a7cace SHA256 b6d9c9ec405ad1d644cf35d57f0f1e878fa6af6ad45b97683de847ff49cbdf84
-EBUILD e2fsprogs-libs-1.41.11.ebuild 1838 RMD160 5520f5bc2602087170c09bc00257e1ea1c7436a0 SHA1 8c1bc7b9baa301072b2baad82e4a86cccc6afe1f SHA256 44490c259019372b67ca1518b44610017fea328e0b215e920a6e260834092769
 EBUILD e2fsprogs-libs-1.41.12.ebuild 1927 RMD160 11ea5294efc721d91de4667f213eb553846b8b76 SHA1 edd93e9c427b12ace4835160ebda4b188bd6b4a1 SHA256 274a5d184eac045c6f2d2cf7a35ea684f0ea354768bfa2532529784bec8d87c5
+EBUILD e2fsprogs-libs-1.41.14.ebuild 1926 RMD160 9025bc2f26b50b18c5daba6325c9b557ab3b6601 SHA1 c866a5c78e1dbd49f434ee9a9869ac13343913bd SHA256 5380c940d66a81943c18f11b199259480e294c197831f8828208c51fe34e2992
 EBUILD e2fsprogs-libs-1.41.7.ebuild 2174 RMD160 95ff3c01a91389786133be96d0e48731b0687155 SHA1 2bed64feb147b1fc25626fb0369350c4139b624d SHA256 ee2e57208608604289eb1c9035d3958d08f83af6f936f3c93c1807a0f04b8c29
-MISC ChangeLog 8724 RMD160 929bd5835a4b2debae938eda9f807eec844c2e7f SHA1 d77ef7895fee001acf0c9db438dc7d7305d044c0 SHA256 667ee0fff53d1262f2d5cace5766ca88353be292292f6d33777db23cb7250958
+MISC ChangeLog 8894 RMD160 9079a02d6f60b35dab76774301915d1e7eec2be5 SHA1 2b9f18615e983056f01bd4ae2498dcff1b5223a6 SHA256 d4be80b211565e4549beb594691b81e093b5fcf692cde83f8f3e73e0a3917baf
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
