@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/e2fsprogs-libs
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.63 2010/12/04 21:51:20 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.64 2010/12/29 08:12:56 vapier Exp $
+
+*e2fsprogs-libs-1.41.14 (29 Dec 2010)
+
+  29 Dec 2010; Mike Frysinger <vapier@gentoo.org>
+  +e2fsprogs-libs-1.41.14.ebuild:
+  Version bump #350003 by Krzysztof Olędzki.
 
   04 Dec 2010; Mike Frysinger <vapier@gentoo.org>
   e2fsprogs-libs-1.41.7.ebuild, e2fsprogs-libs-1.41.11.ebuild,
